# codeecoscan

./: .gitignore  LICENSE  README.md  codeecoscan.html  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/analysis/: ast_analyzer.py  diagnostics.py  feature_extractor.py  profiler.py  repo_scanner.py
app/api/: routes.py
app/cli/: main.py
app/core/: config.py  exceptions.py
app/db/: database.py
app/emissions/: carbon_estimator.py  hardware_profiles.py  models.py
app/models/: schemas.py
app/scoring/: scoring_engine.py  scoring_rules.py
app/utils/: helpers.py
docs/: architecture.md
examples/: heavy_imports.py  nested_loops.py  recursion_example.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Breakdown.jsx  Editor.jsx  EmissionsPanel.jsx  EnergyGauge.jsx  Header.jsx  Modal.jsx  Nav.jsx  Sparkline.jsx  StatusBar.jsx  Tooltip.jsx
frontend/src/components/command/: AlertBox.jsx  CarbonClock.jsx  CommandCenter.jsx  CommitLog.jsx  MiniChart.jsx  Sidebar.jsx  StatsRow.jsx  TopOffenders.jsx
frontend/src/data/: mockData.js
frontend/src/hooks/: useAnalysis.js  useClock.js  useHistory.js  useProfiling.js  useRepoHistory.js  useRepoSummary.js
frontend/src/styles/: lens.css  mobile.css  terminal.css
frontend/src/utils/: analysisHelpers.js  reportExport.js
tests/: test_analyzer.py  test_api.py  test_cli.py  test_cli_emissions.py  test_emissions.py  test_scoring.py
(+17 files in other folders)
